finish art work page, and fix overflow issue

--- a/start/art-works/art-works.css
+++ b/start/art-works/art-works.css
@@ -1,12 +1,18 @@
+a {
+    text-decoration: none;
+}
+li {
+    list-style-type: none;
+}
 
 #about-container {
     height: 100%;
+    overflow: auto;
     
 }
 #about-container-inner {
     display: grid;
     grid-template-rows: auto 1fr;
-    height: 100%;
     width: 80%;
     margin: 0px auto;
 }
@@ -67,11 +73,11 @@
     display: grid;
     grid-template-columns: 3fr 1fr;
     padding-top: 1em;
+    grid-column-gap: 10px;
 }
 .art-c1-content {
     display: grid;
     grid-template-columns: 3fr 4fr;
-    height:fit-content;
     grid-column-gap: 2em;
 }
 .left {
@@ -85,7 +91,8 @@
     color: red;
 }
 .btn-bordered {
-    border: 1px solid #CCC;
+    border: 2px solid #CCC;
+    
 }
 .product-table {
     width: 100%;
@@ -116,3 +123,118 @@
     border-radius: 7px;
     padding: 1em;
 }
+
+/* sidebar begin */
+
+.left-sidebar-block {
+  border-radius: 7px;
+  border: 1px solid #428bca;
+  min-height: 250px;
+  margin-bottom: 20px;
+}
+
+.light-blue {
+  border: 1px solid #428bca;
+}
+.accent-blue {
+  border: 1px solid #d9edf7;
+}
+.accent-background {
+  background-color:  #d9edf7;
+}
+h3.block-header {
+  background-color: #428bca;
+  color: #FFF;
+  padding:7px;
+  font-size: 1em;
+}
+h3.block-header-accent {
+  background-color: #d9edf7;
+  color: #31708f;
+  padding:7px;
+  font-size: 1em;
+}
+.sidebar-list {
+  list-style-type: none;
+  text-align: center;
+  padding: .5em;
+}
+.sidebar-list > li {
+  overflow: auto;
+  margin-bottom: 10px;
+}
+.btn-below {
+  padding: 10px;
+}
+.sidebar-list > li > img {
+  margin-right: 5px;
+  width: 33px;
+}
+.pull-left {
+  float: left;
+}
+.align-text-left {
+  text-align: left;
+}
+.tiny-txt {
+  font-size: .7em;
+}
+.sidebar-list > li > a {
+  padding: 7px 0px;
+  display: block;
+  text-decoration: none;
+  transition-duration: 0.9s;
+}
+
+.sidebar-list > li > a:hover {
+  background-color: #f1f1f1;
+}
+.cart-gap {
+    grid-column-gap: 7px;
+}
+/* sidebar end */
+
+
+/*footer start */
+
+.top-footer {
+    background-color: #e7e7e7;
+}
+.footer-inner {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    grid-column-gap: 1em;
+    width: 80%;
+    height: 350px;
+    margin: 0px auto;
+    padding: 10px 0px 0px;
+}
+.medium-text {
+    font-size: 1.25em;
+    margin-bottom: 25px;
+}
+.footer-list {
+    list-style-type: none;
+      
+}
+.footer-list li {
+    margin-bottom: 20px;
+    overflow: auto;
+}
+ul.footer-list li img {
+    float: left; 
+    margin-right: 10px;
+}
+.footer-link {
+    padding: 4px 0px;
+    display: block;
+}
+.message-gap {
+    margin-bottom: 10px;
+}
+.bottom-footer {
+    color: grey;
+    background-color: black;
+    text-align: center;
+}
+/*footer end */
